# liferay-nativity

./: .classpath  .gitignore  .project  README.md  build-overlays.xml  build-windows.cmd  build.iterate.properties  build.properties  build.xml  ivy-settings.xml  ivy.xml  ivysettings.xml  pom.template  pom.xml
Plugin/Macos/LiferayFinderCore/: ContentManager.h  ContentManager.m  ContextMenuHandlers.h  ContextMenuHandlers.m  FinderHook.h  FinderHook.m  IconCache.h  IconCache.m  IconOverlayHandlers.h  IconOverlayHandlers.m  MenuManager.h  MenuManager.m  RequestManager.h  RequestManager.m  TestIcon.icns
Plugin/Macos/LiferayFinderPlugin/: LiferayFinderPlugin.entitlements  main.m
csharp/src/: Liferay.Nativity.sln
csharp/src/Liferay.Nativity/: AssemblyInfo.cs  Constants.cs  JsonExtensions.cs  Liferay.Nativity.csproj
csharp/src/Liferay.Nativity.Example/: AssemblyInfo.cs  Liferay.Nativity.Example.csproj  Main.cs
java/: nativity-config.properties
java/src/: nativity-log4j.xml
linux/nautilus/src/: CMakeLists.txt  config.h  content.cpp  content.h  handlers.cpp  handlers.h  logger.cpp  logger.h  plugin.cpp  requests.cpp  requests.h  socket.cpp  socket.h  sync.cpp  sync.h
linux/nautilus/src/jsoncpp/: jsoncpp.cpp
mac/FinderSync/LiferayFinderSync/: EBLaunchServices.h  EBLaunchServices.m  FinderSync.h  FinderSync.m  GCDAsyncSocket.h  GCDAsyncSocket.m  Info.plist  JSONKit.h  JSONKit.m  LiferayFinderSync.entitlements  RequestManager.h  RequestManager.m
mac/FinderSync/LiferayShellApp/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
mac/FinderSync/LiferayShellApp.xcodeproj/: project.pbxproj
mac/Injector/LiferayNativityFinder/: ContentManager.m  ContextMenuHandlers.h  FinderHook.m  IconCache.h  IconCache.m  MenuManager.m  RequestManager.h  RequestManager.m
mac/LiferayFinderCore/: AsyncSocket.m  ContentManager.h  ContentManager.m  ContextMenuHandlers.h  ContextMenuHandlers.m  FinderHook.h  FinderHook.m  IconCache.h  IconCache.m  IconOverlayHandlers.h  IconOverlayHandlers.m  Info.plist  MenuManager.h  MenuManager.m  RequestManager.h  RequestManager.m
mac/LiferayFinderCore/LiferayFinderCore.xcodeproj/: project.pbxproj
mac/LiferayFinderPlugin/: LiferayFinderPlugin_Prefix.pch  main.m
mac/LiferayFinderPlugin/English.lproj/: MainMenu.xib
mac/LiferayFinderPlugin/LiferayFinderPlugin.xcodeproj/: project.pbxproj  svp.mode1v3
mac/LiferayFinderPluginInstaller/LiferayFinderPluginInstaller/: AppDelegate.h  AppDelegate.m  main.m  (+1 more)
mac/LiferayFinderPluginInstaller/LiferayFinderPluginInstaller.xcodeproj/: project.pbxproj
mac/LiferayNativityFinder/: ContentManager.h  ContentManager.m  ContextMenuHandlers.m  FinderHook.m  IconCache.h  IconCache.m  IconOverlayHandlers.h  IconOverlayHandlers.m  Info.plist  MenuManager.h  MenuManager.m  RequestManager.h  RequestManager.m
mac/LiferayNativityInjector/: Info.plist  LiferayNativityInjector.m  readme.md
windows/LiferayNativityShellExtensions/: LiferayNativityShellExtensions.sln
(+249 files in other folders)
